[package]
name = "bevy_hanabi"
version = "0.0.1"
authors = ["Jerome Humbert <djeedai@gmail.com>"]
edition = "2021"
description = "Hanabi particle system plugin for the Bevy game engine"
repository = "https://github.com/djeedai/bevy_extra"
homepage = "https://github.com/djeedai/bevy_extra/tree/main/crates/bevy_hanabi"
documentation = "https://docs.rs/bevy_hanabi"
keywords = ["bevy", "particle-system", "particles", "vfx"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bytemuck = "1.5"

[dependencies.bevy]
version = "0.6"
default-features = false
features = [ "render" ]

[[example]]
name = "spawn"
required-features = [ "bevy/bevy_winit" ]

[workspace]
resolver = "2"
members = ["."]
